[metadata]
name = MQTT Remote
version = 0.1
description = Allows python code to be run on a remote computer using MQTT messages as triggers
author = James Gagg
license = GNU General Public License v3.0

[options]
packages = mqtt_remote
install_requires =
    paho-mqtt
    pyyaml
    pyperclip
include_package_data = True

[options.entry_points]
console_scripts =
    mr_start = mqtt_remote.remote:auto_start
    mr_copy_clip = mqtt_remote.callback_creation:copy_template_to_clipboard
    mr_create_callback_file = mqtt_remote.callback_creation:create_callback_file
    mr_where = mqtt_remote.remote:installation_path
